<?xml version="1.0" encoding="utf-8"?><!-- Based on: https://github.com/android/platform_frameworks_base/blob/505e3ab/core/res/res/layout/simple_list_item_2.xml -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/content_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/selected_view"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="?selectedColorPrimary"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusRight="@+id/edit"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/node_checked"
                    android:layout_width="48dp" android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/node_select_multiple"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold"
                        tools:text="@string/profile_name" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit"
                    android:focusable="true"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_image_edit" />

                <LinearLayout
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/share"
                    android:focusable="true"
                    android:nextFocusLeft="@+id/container">

                    <LinearLayout
                        android:id="@+id/share_layer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/shareIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_social_share" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/delete"
                    android:focusable="true"
                    android:padding="12dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_action_delete" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/node_actions"
                    android:layout_width="48dp" android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/node_actions"
                    android:focusable="true" android:clickable="true" android:padding="12dp"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/profile_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_address"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?android:attr/textColorSecondary" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/traffic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/traffic"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/profile_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?attr/accentOrTextSecondary" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/profile_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?attr/accentOrTextSecondary" />

            </LinearLayout>

            <TextView
                android:id="@+id/node_test_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?attr/accentOrTextSecondary"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
